# workspace

./: Cargo.toml  Package.swift  README.md  app-bundle-id-to-icon.sh  cal.html  handle-ws.sh  index.html  new-workspace.sh  package-lock.json  s.sh
Sources/Clip/: main.swift
Tests/ClipTests/: ClipTests.swift
examples/: hello-redis.rs
my-project/: dev.ts  fresh.gen.ts  main.ts
my-project/components/: Editor.tsx  Item.tsx  NewItem.tsx
my-project/islands/: Counter.tsx  ZeStream.tsx
my-project/routes/: _app.tsx  _middleware.ts  about.tsx  countdown.tsx  design.tsx  index.tsx  random-uuid.tsx  search.tsx  stream.tsx
my-project/routes/api/: listen.ts
my-project/routes/github/: [username].tsx
my-project/routes/greet/: [name].tsx
my-project/static/: style.css
pasteboard-rs/: Cargo.toml
pasteboard-rs/src/: main.rs
src/: main.rs
xs/: Cargo.toml
xs-2/: Cargo.toml
xs-2/src/: main.rs
xs/src/: main.rs
