[package]
name = "learn-quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.8.0"
rustls = "0.20.3"
tokio = { version = "1.17.0", features = ["full"] }
futures-util = "0.3.21"
rcgen = "0.9.1"
