[package]
name = "http-sh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
base64 = "0.13.0"
clap = { version = "3.2.14", features = ["derive"] }  
serde_json = "1.0.83"
tiny_http = "0.8.2"
